Projects/Basics/Shopsphere-Ecommerce/K8s_4_With_Network_Policy/_8_Network_Polocies/_1_deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: shopsphere
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  # ingress: []
  # egress: []
